Update kernel repository URLs in workflow

--- a/.github/workflows/PixelOS_sm8550.yml
+++ b/.github/workflows/PixelOS_sm8550.yml
@@ -16,8 +16,8 @@ jobs:
 
     - name: Clone Kernel and Dependencies
       run: |
-        git clone https://github.com/PixelOS-Devices/android_kernel_oneplus_sm8550.git --depth=1 -b sixteen kernel/oneplus/sm8550
-        git clone https://github.com/PixelOS-Devices/android_kernel_oneplus_sm8550-modules.git --depth=1 -b sixteen kernel/oneplus/sm8550-modules
+        git clone https://github.com/OnePlus12R-development/android_kernel_oneplus_sm8550.git --depth=1 -b sixteen-qpr1 kernel/oneplus/sm8550
+        git clone https://github.com/OnePlus12R-development/android_kernel_oneplus_sm8550-modules.git --depth=1 -b sixteen-qpr1 kernel/oneplus/sm8550-modules
     
     - name: Setup release name
       run: |
