--- a/.github/workflows/LineageOS_sm8550.yml
+++ b/.github/workflows/LineageOS_sm8550.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   LineageOS_Kernel_CI:
     name: LineageOS Kernel CI
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
 
     - name: Checkout Repository
